# yamis

./: .editorconfig  .gitignore  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  ci_build.py  generate_cov.py  project.yamis.toml  project.yamis.yaml  project.yamis.yml  yamis.root.yml  zip_releases.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: audit.yml  build.yml  cov.yml  publish.yml  release.yml  test.yml
json-schema/: yamis.json
src/: app.rs  args.rs  args_format.rs  cli.rs  config_files.rs  debug_config.rs  defaults.rs  lib.rs  main.rs  print_utils.rs  sample.toml  tasks.rs  types.rs  updater.rs  utils.rs
src/format_str/: grammar.pest  mod.rs
src/parser/: functions.rs  grammar.pest  mod.rs
tests/: test_args_format.rs  test_args_parsers.rs  test_cli.rs  test_tasks.rs
tests/utils/: mod.rs
