[package]
name = "yamis"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A task runner that accepts positional and named arguments."
homepage = "https://github.com/adrianmrit/yamis/"
repository = "https://github.com/adrianmrit/yamis/"
readme = "README.md"
keywords = ["task", "build", "subcommand"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]
include = ["/LICENSE", "/README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
cfg-if = "0.1"
colored = "2"
toml = "0.5"
lazy_static = "1.4"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
ctrlc = "3.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"

[[bin]]
name = "yamis"
path = "src/main.rs"