[package]
name = "yamis"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-only"
description = "A task runner that accepts positional and named arguments."
homepage = "https://github.com/adrianmrit/yamis/"
repository = "https://github.com/adrianmrit/yamis/"
readme = "README.md"
keywords = ["task", "build", "subcommand", "runner", "command"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
cfg-if = "1.0.0"
colored = "2"
toml = "0.5"
serde_yaml = "0.9"
lazy_static = "1.4"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
petgraph = "0.6"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
ctrlc = "3.2"
dotenv-parser = "0.1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"

[[bin]]
name = "yamis"
path = "src/main.rs"

# fixes linker `cc` not found issue
[package.metadata.cross.target.x86_64-apple-darwin]
zig = true