[package]
name = "yamis"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Adrian Martinez <adrianmrit@gmail.com>"]
description = "Task runner for teams and individuals."
homepage = "https://github.com/adrianmrit/yamis/"
repository = "https://github.com/adrianmrit/yamis/"
readme = "README.md"
keywords = ["task", "build", "subcommand", "runner", "command"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
cfg-if = "1.0"
colored = "2"
toml = "0.5"
serde_yaml = "0.9"
lazy_static = "1.4"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
petgraph = "0.6"
uuid = { version = "1.1", features = ["serde", "v4"] }
ctrlc = "3.2"
dotenv-parser = "0.1"
clap = { version = "4.0", features = ["derive", "cargo"] }
pest = "2.0"
pest_derive = "2.0"
indexmap = "1.9"
shellexpand = "2.1.2"
self_update = { version = "0.32", features = ["archive-tar", "archive-zip", "compression-flate2"] }
directories = { version = "4.0" }

# Example for adding another version as dependency. Need to remove the runtime feature, and make it optional
# yamis_v2 = { package="yamis",  version = "2.0", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"

[[bin]]
name = "yamis"
path = "src/main.rs"

[features]
default = ["runtime"]
# Only add other versions as dependencies if the runtime feature is enabled
runtime = []
